# The-Flying-Horror

./: Arm.STL  Base.SLDPRT  Base.STL  CMakeLists.txt  LegNew.SLDPRT  LegNew.STL  README.md  requirements.md
include/flying_horror/: domain_types.hpp  motor_output.hpp  pid_controller.hpp  roll_dynamics.hpp  sim.hpp  units.hpp  utils.hpp
results/: output.csv
scripts/: plot_telemetry.py
solidwork designs/: Arm.SLDPRT
src/: main.cpp  pid_controller.cpp  roll_dynamics.cpp  sim.cpp  utils.cpp
tests/: CMakeLists.txt  domain_types_tests.cpp  motor_output_tests.cpp  pid_controller_tests.cpp  roll_dynamics_tests.cpp  units_tests.cpp
